# weblibri

./: .gitignore  Cargo.toml  build.rs
src/: cache.rs  db.rs  httphandler.rs  main.rs  worker.rs
static/: weblibri.css  weblibri.js
static/css/: datatables.min.css
static/js/: datatables.min.js  epub.js.map  epub.min.js
static/reader_css/: main.css
templates/: main_page.html  reader_page.html
